# gen-ai-research

./: .gitignore  FaceVAETrainer.py  dev-requirements.txt  requirements.txt  setup.cfg  setup.py
aicraft/: trainer.py
aicraft/models/: AutoEncoderTrainers.py
aicraft/models/autoencoder/: decoder.py  encoder.py  model.py
aicraft/models/vae/: encoder.py  model.py  sampling.py
aicraft/models/vae/faces/: decoder.py  encoder.py  model.py
aicraft/utils/: average_meter.py  loaders.py  loss.py  visualise.py
docs/: vae.md
notebooks/: autoencoder.ipynb  cartoon-face-generation-vae.ipynb  cartoon-faces-model-evaluation.ipynb  variational-autoencoder.ipynb
