[metadata]
name = aicraft
;version = 0.0.0
author = Sangram Reddy
author_email = reddy.horcrux@gmail.com
description = A package that allows to speed up AI research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reddy-s/gen-ai-research
project_urls =
    Bug Tracker = https://github.com/reddy-s/gen-ai-research/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11
install_requires =
    numpy==1.26.4
    pillow==10.3.0
    torch==2.3.1
    torchvision==0.18.1
    tqdm==4.66.4
    datasets==2.19.2
    matplotlib==3.9.0
    torchsummary==1.5.1
    tensorboard==2.17.0
    mlflow==2.13.2
    pthflops==0.4.2
    safetensors==0.4.3
    scikit-learn==1.5.0

[options.packages.find]
where = .
